--- a/frontend/src/styles/siteMenu.css
+++ b/frontend/src/styles/siteMenu.css
@@ -9,12 +9,12 @@
   
   /* Color/shape of burger icon bars */
   .bm-burger-bars {
-    background: #373a47;
+    background: #97918e;
   }
   
   /* Color/shape of burger icon bars on hover*/
   .bm-burger-bars-hover {
-    background: #a90000;
+    background: #59ff00; 
   }
   
   /* Position and sizing of clickable cross button */
@@ -39,14 +39,14 @@
   
   /* General sidebar styles */
   .bm-menu {
-    background:  rgb(44, 45, 47);
+    background:rgb(44, 45, 47);
     padding: 2.5em 1.5em 0;
     font-size: 1.15em;
   }
   
   /* Morph shape necessary with bubble or elastic */
   .bm-morph-shape {
-    fill: #373a47;
+    fill:rgb(44, 45, 47);
   }
   
   /* Wrapper for item list */
@@ -63,5 +63,5 @@
   
   /* Styling of overlay */
   .bm-overlay {
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, .3);
   }
